--- a/java_prototype/Iterations/Iteration 2/GeoSpotter_v1/src/main/resources/com/example/geospotter_v1/hello-view.fxml
+++ b/java_prototype/Iterations/Iteration 2/GeoSpotter_v1/src/main/resources/com/example/geospotter_v1/hello-view.fxml
@@ -10,6 +10,6 @@
   </padding>
 
   <Label fx:id="welcomeText" />
-   <Label texo" />
+   <Label text="Vedemo" />
   <Button onAction="#onHelloButtonClick" text="Hello!" />
 </VBox>
